--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="src\Game\CRisingObject.cpp" />
     <ClCompile Include="src\Game\CRotateFloorGimmick.cpp" />
     <ClCompile Include="src\Game\CRotateFloorTimeGimmick.cpp" />
+    <ClCompile Include="src\Game\CRotationg.cpp" />
     <ClCompile Include="src\Game\CScore.cpp" />
     <ClCompile Include="src\Game\CSignboard.cpp" />
     <ClCompile Include="src\Game\CSignboardUI.cpp" />
@@ -133,6 +134,7 @@
     <ClCompile Include="src\Game\CUnityChan.cpp" />
     <ClCompile Include="src\Game\CWeapon.cpp" />
     <ClCompile Include="src\Game\CWireMeshClimbWall.cpp" />
+    <ClCompile Include="src\Game\CWireMeshMoveClimbWall.cpp" />
     <ClCompile Include="src\Game\CXCharacter.cpp" />
     <ClCompile Include="src\Game\CYukari.cpp" />
     <ClCompile Include="src\Game\CMajicSword.cpp" />
@@ -246,6 +248,7 @@
     <ClInclude Include="src\Game\CRisingObject.h" />
     <ClInclude Include="src\Game\CRotateFloorGimmick.h" />
     <ClInclude Include="src\Game\CRotateFloorTimeGimmick.h" />
+    <ClInclude Include="src\Game\CRotationg.h" />
     <ClInclude Include="src\Game\CScore.h" />
     <ClInclude Include="src\Game\CSignboard.h" />
     <ClInclude Include="src\Game\CSignboardUI.h" />
@@ -284,6 +287,7 @@
     <ClInclude Include="src\Game\CUnityChan.h" />
     <ClInclude Include="src\Game\CWeapon.h" />
     <ClInclude Include="src\Game\CWireMeshClimbWall.h" />
+    <ClInclude Include="src\Game\CWireMeshMoveClimbWall.h" />
     <ClInclude Include="src\Game\CXCharacter.h" />
     <ClInclude Include="src\Game\CYukari.h" />
     <ClInclude Include="src\Game\CMajicSword.h" />
