ベースプロジェクト更新 カプセルの当たり判定実装（カプセルと三角形の当たり判定のみ実装）

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="src\BaseSystem\CBulletEffect.cpp" />
     <ClCompile Include="src\BaseSystem\CCamera.cpp" />
     <ClCompile Include="src\BaseSystem\CCollider.cpp" />
+    <ClCompile Include="src\BaseSystem\CColliderCapsule.cpp" />
     <ClCompile Include="src\BaseSystem\CColliderLine.cpp" />
     <ClCompile Include="src\BaseSystem\CColliderMesh.cpp" />
     <ClCompile Include="src\BaseSystem\CColliderSphere.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="src\BaseSystem\CBulletEffect.h" />
     <ClInclude Include="src\BaseSystem\CCamera.h" />
     <ClInclude Include="src\BaseSystem\CCollider.h" />
+    <ClInclude Include="src\BaseSystem\CColliderCapsule.h" />
     <ClInclude Include="src\BaseSystem\CColliderLine.h" />
     <ClInclude Include="src\BaseSystem\CColliderMesh.h" />
     <ClInclude Include="src\BaseSystem\CColliderSphere.h" />
