Testの処理を追加し忘れていたので追加

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Test\CBootMenuScene.cpp" />
     <ClCompile Include="src\Test\CColBasecpp.cpp" />
+    <ClCompile Include="src\Test\CColCapsule.cpp" />
     <ClCompile Include="src\Test\CColLine.cpp" />
     <ClCompile Include="src\Test\CCollisionTestScene.cpp" />
     <ClCompile Include="src\Test\CColQuad.cpp" />
@@ -301,6 +302,7 @@
     <ClInclude Include="src\Game\PlayerItem.h" />
     <ClInclude Include="src\Test\CBootMenuScene.h" />
     <ClInclude Include="src\Test\CColBase.h" />
+    <ClInclude Include="src\Test\CColCapsule.h" />
     <ClInclude Include="src\Test\CColLine.h" />
     <ClInclude Include="src\Test\CCollisionTestScene.h" />
     <ClInclude Include="src\Test\CColQuad.h" />
