--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -63,6 +63,7 @@
     <ClCompile Include="src\BaseSystem\CUIBase.cpp" />
     <ClCompile Include="src\BaseSystem\CVector.cpp" />
     <ClCompile Include="src\BaseSystem\CObjectBase.cpp" />
+    <ClCompile Include="src\BaseSystem\Easing.cpp" />
     <ClCompile Include="src\BaseSystem\Maths.cpp" />
     <ClCompile Include="src\Game\CAppearFloor.cpp" />
     <ClCompile Include="src\Game\CApplication.cpp" />
@@ -75,6 +76,8 @@
     <ClCompile Include="src\Game\CFallingObjects.cpp" />
     <ClCompile Include="src\Game\CField1.cpp" />
     <ClCompile Include="src\Game\CField_Worlds_1.cpp" />
+    <ClCompile Include="src\Game\CFlame.cpp" />
+    <ClCompile Include="src\Game\CFlamethrower.cpp" />
     <ClCompile Include="src\Game\CGameCamera.cpp" />
     <ClCompile Include="src\Game\CGameManager.cpp" />
     <ClCompile Include="src\Game\CGameMenu.cpp" />
@@ -213,6 +216,7 @@
     <ClInclude Include="src\BaseSystem\CVector.h" />
     <ClInclude Include="src\BaseSystem\CVertex.h" />
     <ClInclude Include="src\BaseSystem\CObjectBase.h" />
+    <ClInclude Include="src\BaseSystem\Easing.h" />
     <ClInclude Include="src\BaseSystem\Maths.h" />
     <ClInclude Include="src\BaseSystem\SceneType.h" />
     <ClInclude Include="src\BaseSystem\TaskPauseType.h" />
@@ -232,6 +236,8 @@
     <ClInclude Include="src\Game\CFallingObjects.h" />
     <ClInclude Include="src\Game\CField1.h" />
     <ClInclude Include="src\Game\CField_Worlds_1.h" />
+    <ClInclude Include="src\Game\CFlame.h" />
+    <ClInclude Include="src\Game\CFlamethrower.h" />
     <ClInclude Include="src\Game\CGameCamera.h" />
     <ClInclude Include="src\Game\CGameMenu.h" />
     <ClInclude Include="src\Game\CGoalBase.h" />
