ベースプロジェクト更新 火炎放射エフェクトの調整と衝突判定の処理負荷の軽減対応

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -556,6 +556,9 @@
     <ClCompile Include="src\Game\CFlamethrower.cpp">
       <Filter>ソース ファイル\Game\UI\Frame</Filter>
     </ClCompile>
+    <ClCompile Include="src\BaseSystem\CBounds.cpp">
+      <Filter>ソース ファイル\BaseSystem\Collider</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseSystem\CCollider.h">
@@ -1025,6 +1028,9 @@
     </ClInclude>
     <ClInclude Include="src\Game\CFlamethrower.h">
       <Filter>ソース ファイル\Game\UI\Frame</Filter>
+    </ClInclude>
+    <ClInclude Include="src\BaseSystem\CBounds.h">
+      <Filter>ソース ファイル\BaseSystem\Collider</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
