--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -15,6 +15,7 @@
     <ClCompile Include="src\BaseSystem\CBGMManager.cpp" />
     <ClCompile Include="src\BaseSystem\CBillBoard.cpp" />
     <ClCompile Include="src\BaseSystem\CBillBoardImage.cpp" />
+    <ClCompile Include="src\BaseSystem\CBounds.cpp" />
     <ClCompile Include="src\BaseSystem\CBulletEffect.cpp" />
     <ClCompile Include="src\BaseSystem\CCamera.cpp" />
     <ClCompile Include="src\BaseSystem\CCollider.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="src\BaseSystem\CBGMManager.h" />
     <ClInclude Include="src\BaseSystem\CBillBoard.h" />
     <ClInclude Include="src\BaseSystem\CBillBoardImage.h" />
+    <ClInclude Include="src\BaseSystem\CBounds.h" />
     <ClInclude Include="src\BaseSystem\CBulletEffect.h" />
     <ClInclude Include="src\BaseSystem\CCamera.h" />
     <ClInclude Include="src\BaseSystem\CCollider.h" />
