--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="src\Game\CScore.cpp" />
     <ClCompile Include="src\Game\CSignboard.cpp" />
     <ClCompile Include="src\Game\CSignboardUI.cpp" />
+    <ClCompile Include="src\Game\CSlash.cpp" />
     <ClCompile Include="src\Game\CStage1.cpp" />
     <ClCompile Include="src\Game\CStage2.cpp" />
     <ClCompile Include="src\Game\CStageBase.cpp" />
@@ -263,6 +264,7 @@
     <ClInclude Include="src\Game\CScore.h" />
     <ClInclude Include="src\Game\CSignboard.h" />
     <ClInclude Include="src\Game\CSignboardUI.h" />
+    <ClInclude Include="src\Game\CSlash.h" />
     <ClInclude Include="src\Game\CStage1.h" />
     <ClInclude Include="src\Game\CStage2.h" />
     <ClInclude Include="src\Game\CStageBase.h" />
