--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -77,6 +77,7 @@
     <ClCompile Include="src\Game\CFallingObjects.cpp" />
     <ClCompile Include="src\Game\CField1.cpp" />
     <ClCompile Include="src\Game\CField_Worlds_1.cpp" />
+    <ClCompile Include="src\Game\CFixedFlamethrower.cpp" />
     <ClCompile Include="src\Game\CFlame.cpp" />
     <ClCompile Include="src\Game\CFlamethrower.cpp" />
     <ClCompile Include="src\Game\CGameCamera.cpp" />
@@ -239,6 +240,7 @@
     <ClInclude Include="src\Game\CFallingObjects.h" />
     <ClInclude Include="src\Game\CField1.h" />
     <ClInclude Include="src\Game\CField_Worlds_1.h" />
+    <ClInclude Include="src\Game\CFixedFlamethrower.h" />
     <ClInclude Include="src\Game\CFlame.h" />
     <ClInclude Include="src\Game\CFlamethrower.h" />
     <ClInclude Include="src\Game\CGameCamera.h" />
