--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="src\Game\CRotateFloorGimmick.cpp" />
     <ClCompile Include="src\Game\CRotateFloorTimeGimmick.cpp" />
     <ClCompile Include="src\Game\CRotationg.cpp" />
+    <ClCompile Include="src\Game\CSavePoint.cpp" />
     <ClCompile Include="src\Game\CScore.cpp" />
     <ClCompile Include="src\Game\CSignboard.cpp" />
     <ClCompile Include="src\Game\CSignboardUI.cpp" />
@@ -263,6 +264,7 @@
     <ClInclude Include="src\Game\CRotateFloorGimmick.h" />
     <ClInclude Include="src\Game\CRotateFloorTimeGimmick.h" />
     <ClInclude Include="src\Game\CRotationg.h" />
+    <ClInclude Include="src\Game\CSavePoint.h" />
     <ClInclude Include="src\Game\CScore.h" />
     <ClInclude Include="src\Game\CSignboard.h" />
     <ClInclude Include="src\Game\CSignboardUI.h" />
